<resources>
    <string name="app_name">MovieApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_save_fragment" translatable="false">Hello save fragment</string>
    <string name="hello_search_fragment" translatable="false">Hello search fragment</string>
    <string name="hello_profile_fragment" translatable="false">Hello profile fragment</string>
    <string name="hello_home_fragment" translatable="false">Hello home fragment</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile picture</string>
    <string name="hello">Hello</string>
    <string name="reviews">Reviews</string>
    <string name="movies">Movies</string>
    <string name="username">Username</string>
    <string name="feed">Feed</string>
    <string name="my_reviews">My Reviews</string>
    <string name="my_lists">My Lists</string>
    <string name="settings">Settings</string>
    <string name="country">Netherlands</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="discover">discover</string>
    <string name="recent">recent</string>
    <string name="poster">POSTER</string>
    <string name="icon">ICON</string>
    <string name="filter">filter</string>


    <string name="language">Language</string>
    <string name="genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="ratings">Ratings</string>
    <string name="duration">duration</string>
    <string name="reset_filter">reset all filters</string>
    <string name="dutch">DUTCH</string>
    <string name="german">GERMAN</string>
    <string name="english">ENGLISH</string>
    <string name="sort_by">sort by</string>
    <string name="date_new">Date - New</string>
    <string name="date_old">Date - Old</string>
    <string name="length">length</string>
    <string name="title">Title</string>
    <string name="company">company</string>
    <string name="summary">Summary</string>
    <string name="write_a_review">Write a review:</string>
    <string name="actors">Actors:</string>

    <string-array name="sort_entries">
        <item>Default</item>
        <item>Rating</item>
        <item>Date: New - Old</item>
        <item>Date: Old - New</item>
    </string-array>
    <string name="french">FRENCH</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">LOGO</string>
    <string name="share">share</string>
    <string name="cancel">cancel</string>
    <string name="submit_a_rating">Submit a rating:</string>
    <string name="support">Support</string>
    <string name="color">Color</string>
    <string name="edit_profile">Edit Profile</string>
</resources>
